presentation display done

--- a/web-app/css/style.css
+++ b/web-app/css/style.css
@@ -204,6 +204,10 @@ body {
     color:#161616;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+article {
+    margin-left:2%;
+}
 #topMenu {
     background-color:#FFB310;
     padding:1%;
